--- a/NaiveBayesBernoulli.ipynb
+++ b/NaiveBayesBernoulli.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesBernoulli.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyM7Vd0nK5uLNfK1/x0iXjPn",
+      "authorship_tag": "ABX9TyPI7In9QO5EAxf/lKHU/tna",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,32 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "DXoOPzeqBi1g",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Clone the entire repo.\n",
+        "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
+        "%cd cloned-repo\n",
+        "!ls"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Hv0MoM-4AIHz",
+        "colab_type": "text"
+      },
+      "source": [
+        "If X is random variable Bernoulli-distributed, it can assume only two values (for simplicity, let’s call them 0 and 1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "wavKBB654ezr",
         "colab_type": "code",
         "colab": {}
@@ -36,10 +62,22 @@
         "from sklearn.datasets import make_classification\n",
         "import numpy as np\n",
         "from sklearn.naive_bayes import BernoulliNB\n",
-        "from sklearn.model_selection import train_test_split"
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "from IPython.display import Image"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-jTZVVPrAYtd",
+        "colab_type": "text"
+      },
+      "source": [
+        "Bernoulli naive Bayes expects binary feature vectors, however, the class BernoulliNB has a binarize parameter which allows specifying a threshold that will be used internally to transform the features:"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -64,6 +102,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "47XmNd9nAkEO",
+        "colab_type": "text"
+      },
+      "source": [
+        "We will use 0.0 as a binary threshold, so each point can be characterized by the quadrant where it’s located"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -136,6 +184,29 @@
       "source": [
         "bnb = BernoulliNB(binarize=0.0)\n",
         "bnb.fit(X_train, Y_train)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vIZUIs1aAsuw",
+        "colab_type": "text"
+      },
+      "source": [
+        "The score in rather good, but if we want to understand how the binary classifier worked, it’s useful to see how the data have been internally binarized:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K9xvGLs6BPuO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Image(\"naiveBayes.png\", width=640)"
       ],
       "execution_count": 0,
       "outputs": []
