--- a/NaiveBayesMultinomialNB.ipynb
+++ b/NaiveBayesMultinomialNB.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesMultinomialNB.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOb0BWTMrTs7vaI8g846+N6",
+      "authorship_tag": "ABX9TyOj/itetxgq3zoAWNAhHc79",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,9 @@
       "source": [
         "from sklearn.feature_extraction import DictVectorizer\n",
         "import numpy as np\n",
-        "from sklearn.naive_bayes import MultinomialNB"
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "from IPython.display import Image\n",
+        "import matplotlib.pyplot as plt"
       ],
       "execution_count": 0,
       "outputs": []
@@ -63,11 +65,23 @@
         "\n",
         "{'house': 5, 'street': 5, 'shop': 0, 'car': 10, 'tree': 500, 'river': 1}\n",
         "] \n",
-        "\n",
         "dv = DictVectorizer(sparse=False)\n",
         "X = dv.fit_transform(data)\n",
         "Y = np.array([1, 0])\n",
         "X"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lCzOkprOfZg6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Y"
       ],
       "execution_count": 0,
       "outputs": []
