--- a/NaiveBayesGaussian.ipynb
+++ b/NaiveBayesGaussian.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesGaussian.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOxETMglRpAqVokLoKJRuKc",
+      "authorship_tag": "ABX9TyOUixL6CG/AR2V5gx33cNVo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "b7Uf0WxFnazI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!pip install -U matplotlib"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "l1ChqDsEg6hN",
         "colab_type": "code",
         "colab": {}
@@ -41,8 +54,9 @@
         "from sklearn.linear_model import LogisticRegression \n",
         "from sklearn.metrics import roc_curve, auc\n",
         "from sklearn.model_selection import train_test_split\n",
+        "\n",
         "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n"
+        "import matplotlib.pyplot as plt"
       ],
       "execution_count": 0,
       "outputs": []
@@ -94,20 +108,86 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "_36wQLlxkb0R",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.25)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p-CN-iw8kf-X",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "gnb = GaussianNB()\n",
+        "gnb.fit(X_train, Y_train)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FOIAadpIkkSN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Y_gnb_score = gnb.predict_proba(X_test)\n",
+        "#Y_gnb_score"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "47sSFpEUkvKd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "lr = LogisticRegression() \n",
+        "lr.fit(X_train, Y_train)\n",
+        "Y_lr_score = lr.decision_function(X_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "ncgc83gHhDaU",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.25)\n",
-        "gnb = GaussianNB()\n",
-        "gnb.fit(X_train, Y_train)\n",
-        "Y_gnb_score = gnb.predict_proba(X_test)\n",
-        "lr = LogisticRegression() \n",
-        "lr.fit(X_train, Y_train)\n",
-        "Y_lr_score = lr.decision_function(X_test)\n",
         "fpr_gnb, tpr_gnb, thresholds_gnb = roc_curve(Y_test, Y_gnb_score[:, 1])\n",
         "fpr_lr, tpr_lr, thresholds_lr = roc_curve(Y_test, Y_lr_score)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CZsLaUAak1Uz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(10,5))\n",
+        "plt.plot(fpr_gnb,tpr_gnb)\n",
+        "plt.plot(fpr_lr,tpr_lr)\n",
+        "#plt.title(\"ROC Curve\")\n",
+        "plt.show()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -125,7 +205,6 @@
         "mnb = MultinomialNB()\n",
         "\n",
         "print(cross_val_score(gnb, digits.data, digits.target, scoring='accuracy', cv=10).mean())\n",
-        "\n",
         "print(cross_val_score(mnb, digits.data, digits.target, scoring='accuracy', cv=10).mean())"
       ],
       "execution_count": 0,
