--- a/NaiveBayesBernoulli.ipynb
+++ b/NaiveBayesBernoulli.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesBernoulli.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPI7In9QO5EAxf/lKHU/tna",
+      "authorship_tag": "ABX9TyNjWZqwANAQmpQ+31+aJy7Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "colab_type": "text"
       },
       "source": [
-        "If X is random variable Bernoulli-distributed, it can assume only two values (for simplicity, let’s call them 0 and 1)"
+        "If X is random variable Bernoulli-distributed, it can assume only two values (let’s call them 0 and 1)"
       ]
     },
     {
@@ -64,7 +64,8 @@
         "from sklearn.naive_bayes import BernoulliNB\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "from IPython.display import Image"
+        "from IPython.display import Image\n",
+        "import matplotlib.pyplot as plt"
       ],
       "execution_count": 0,
       "outputs": []
@@ -131,7 +132,6 @@
         "colab": {}
       },
       "source": [
-        "import matplotlib.pyplot as plt\n",
         "plt.figure(figsize=(10,5))\n",
         "fig = plt.scatter(X[:,0],X[:,1], marker='o', c=X[:,1],\n",
         "            s=25)\n",
@@ -167,6 +167,60 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "X2kNu9BpqMnV",
+        "colab_type": "text"
+      },
+      "source": [
+        "Plot the training data, X is the training data, Y-axis is the label (0,1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "motMK3lHp2tg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(10,5))\n",
+        "fig = plt.scatter(X_train[:,0],Y_train, marker='o', c=X_train[:,0],\n",
+        "            s=25)\n",
+        "plt.colorbar(fig)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xfu85998qXxf",
+        "colab_type": "text"
+      },
+      "source": [
+        "Plot the testing data, X is the test data, Y-axis is the label (0,1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A7_ekjLvqeOK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(10,5))\n",
+        "fig = plt.scatter(X_test[:,0],Y_test, marker='o', c=X_test[:,0],\n",
+        "            s=25)\n",
+        "plt.colorbar(fig)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "WFjFUN8Y_tFe",
         "colab_type": "text"
       },
@@ -195,7 +249,7 @@
         "colab_type": "text"
       },
       "source": [
-        "The score in rather good, but if we want to understand how the binary classifier worked, it’s useful to see how the data have been internally binarized:"
+        "If we want to understand how the binary classifier worked, it’s useful to see how the data have been internally binarized:"
       ]
     },
     {
