--- a/NaiveBayesBernoulli.ipynb
+++ b/NaiveBayesBernoulli.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesBernoulli.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNjWZqwANAQmpQ+31+aJy7Q",
+      "authorship_tag": "ABX9TyMfjA0Q3LSisYOmHnXunJLm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -253,19 +253,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "K9xvGLs6BPuO",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "Image(\"naiveBayes.png\", width=640)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "08JVkg3S_00g",
@@ -297,6 +284,23 @@
       "source": [
         "**Make a prediction with the model**"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AJ1XqcG12Jls",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(10,5))\n",
+        "fig = plt.scatter(X_test[:,0],Y_test, marker='o', c=X_test[:,0],s=25)\n",
+        "plt.plot([0,0,1,1],[0,1,0,1], 'r+')\n",
+        "plt.colorbar(fig)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
