--- a/NaiveBayesGaussian2.ipynb
+++ b/NaiveBayesGaussian2.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesGaussian2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNRmSg582Zecs2f2VDlpPst",
+      "authorship_tag": "ABX9TyOxg6xaCNfDUqbcc9L7j7si",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,16 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/NaiveBayesGaussian2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OKZnrZzI3hYX",
+        "colab_type": "text"
+      },
+      "source": [
+        "Load the data"
       ]
     },
     {
@@ -43,17 +53,57 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Vlk5y1jh3-_T",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.datasets import make_classification\n",
+        "import numpy as np\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "p_SmsQa12qPs",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# store the feature matrix (X) and response vector (y) \n",
+        "# store the feature matrix (X) and label (y) \n",
         "X = iris.data \n",
         "y = iris.target "
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KVqtxaW04P3B",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X.shape\n",
+        "X.view()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GHozZuaI3pBk",
+        "colab_type": "text"
+      },
+      "source": [
+        "Split the data into training and test data"
+      ]
     },
     {
       "cell_type": "code",
@@ -64,11 +114,46 @@
       },
       "source": [
         "# splitting X and y into training and testing sets \n",
-        "from sklearn.model_selection import train_test_split \n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.4, random_state=1) "
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8xf67IitAovp",
+        "colab_type": "text"
+      },
+      "source": [
+        "Plot the data, there are 3 classes of the irises"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8xbEH9e635lJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(10,5))\n",
+        "fig = plt.scatter(X_train[:,0],y_train, marker='o', c=X_train[:,1],s=25)\n",
+        "plt.colorbar(fig)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BR_ESJUd3t1u",
+        "colab_type": "text"
+      },
+      "source": [
+        "Create and train the model on the training data"
+      ]
     },
     {
       "cell_type": "code",
@@ -103,12 +188,42 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "CmmgdVjUAwbh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "y_pred.view()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ysIzjDigA05a",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(10,5))\n",
+        "fig = plt.scatter(X_test[:,0],y_test, marker='o', c=X_test[:,1],s=25)\n",
+        "plt.plot(X_test[:,0],y_pred,'r+')\n",
+        "plt.colorbar(fig)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "MssAWcOVgif7",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# comparing actual response values (y_test) with predicted response values (y_pred) \n",
+        "_# comparing actual response values (y_test) with predicted response values (y_pred) \n",
         "from sklearn import metrics \n",
         "print(\"Gaussian Naive Bayes model accuracy(in %):\", metrics.accuracy_score(y_test, y_pred)*100)"
       ],
