--- a/NaiveBayesBernoulli.ipynb
+++ b/NaiveBayesBernoulli.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesBernoulli.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMfjA0Q3LSisYOmHnXunJLm",
+      "authorship_tag": "ABX9TyPY+TOnO8iIEQbqFSkFd9uf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -183,8 +183,7 @@
       },
       "source": [
         "plt.figure(figsize=(10,5))\n",
-        "fig = plt.scatter(X_train[:,0],Y_train, marker='o', c=X_train[:,0],\n",
-        "            s=25)\n",
+        "fig = plt.scatter(X_train[:,0],Y_train, marker='o', c=X_train[:,0], s=25)\n",
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
