--- a/NaiveBayesGaussian.ipynb
+++ b/NaiveBayesGaussian.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesGaussian.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOUixL6CG/AR2V5gx33cNVo",
+      "authorship_tag": "ABX9TyPIDXjC+zbcRCTitCC2Hz5k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,16 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/NaiveBayesGaussian.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XPsAufZyB2ew",
+        "colab_type": "text"
+      },
+      "source": [
+        "Install the required libraries"
       ]
     },
     {
@@ -55,11 +65,22 @@
         "from sklearn.metrics import roc_curve, auc\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
+        "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AsELXrLdB6gi",
+        "colab_type": "text"
+      },
+      "source": [
+        "Create a data set and plot it"
+      ]
     },
     {
       "cell_type": "code",
@@ -69,51 +90,9 @@
         "colab": {}
       },
       "source": [
-        "nb_samples = 600\n",
-        "X, Y = make_classification(n_samples=nb_samples, n_features=2, n_informative=2, n_redundant=0)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KZtXGzgCjh24",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "plt.figure(figsize=(10,5))\n",
-        "fig = plt.scatter(X[:,0],Y, marker='o', c=X[:,1], s=25)\n",
-        "plt.colorbar(fig)\n",
-        "plt.show()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UE-lH0V8izUh",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "df = pd.DataFrame(X,Y,columns=[\"X\",\"Y\"])\n",
-        "df"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_36wQLlxkb0R",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.25)"
+        "from sklearn.datasets import make_blobs\n",
+        "X, y = make_blobs(1000, 2, centers=2, random_state=2, cluster_std=1.5)\n",
+        "plt.scatter(X[:, 0], X[:, 1], c=y, s=50, cmap='RdBu');"
       ],
       "execution_count": 0,
       "outputs": []
@@ -126,8 +105,8 @@
         "colab": {}
       },
       "source": [
-        "gnb = GaussianNB()\n",
-        "gnb.fit(X_train, Y_train)"
+        "# splitting X and y into training and testing sets \n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1) "
       ],
       "execution_count": 0,
       "outputs": []
@@ -135,28 +114,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FOIAadpIkkSN",
+        "id": "hl7wIq3uRCww",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "Y_gnb_score = gnb.predict_proba(X_test)\n",
-        "#Y_gnb_score"
+        "plt.figure(figsize=(10,5))\n",
+        "fig = plt.scatter(X_train[:,0],y_train, marker='o', c=X_train[:,1],s=25, cmap='RdBu')\n",
+        "plt.colorbar(fig)\n",
+        "plt.show()"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y8QuyNBvDR_m",
+        "colab_type": "text"
+      },
+      "source": [
+        "Create and train the model"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "47sSFpEUkvKd",
+        "id": "VD5k81y7KNoW",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "lr = LogisticRegression() \n",
-        "lr.fit(X_train, Y_train)\n",
-        "Y_lr_score = lr.decision_function(X_test)"
+        "model = GaussianNB()\n",
+        "model.fit(X, y);"
       ],
       "execution_count": 0,
       "outputs": []
@@ -169,8 +159,9 @@
         "colab": {}
       },
       "source": [
-        "fpr_gnb, tpr_gnb, thresholds_gnb = roc_curve(Y_test, Y_gnb_score[:, 1])\n",
-        "fpr_lr, tpr_lr, thresholds_lr = roc_curve(Y_test, Y_lr_score)"
+        "ypred = model.predict_proba(X_test)\n",
+        "ypredClass = ypred.round()\n",
+        "print(ypredClass)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -178,15 +169,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CZsLaUAak1Uz",
+        "id": "Zoe_uHqZMjDX",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "plt.figure(figsize=(10,5))\n",
-        "plt.plot(fpr_gnb,tpr_gnb)\n",
-        "plt.plot(fpr_lr,tpr_lr)\n",
-        "#plt.title(\"ROC Curve\")\n",
+        "fig = plt.scatter(X_train[:,0],y_train, marker='o', c=X_train[:,1],s=25, cmap='RdBu')\n",
+        "plt.colorbar(fig)\n",
+        "plt.plot(X_test[:,0],ypredClass,'r+')\n",
         "plt.show()"
       ],
       "execution_count": 0,
@@ -201,11 +192,7 @@
       },
       "source": [
         "digits = load_digits()\n",
-        "gnb = GaussianNB()\n",
-        "mnb = MultinomialNB()\n",
-        "\n",
-        "print(cross_val_score(gnb, digits.data, digits.target, scoring='accuracy', cv=10).mean())\n",
-        "print(cross_val_score(mnb, digits.data, digits.target, scoring='accuracy', cv=10).mean())"
+        "print(cross_val_score(model, digits.data, digits.target, scoring='accuracy', cv=10).mean())"
       ],
       "execution_count": 0,
       "outputs": []
