--- a/KNN2.ipynb
+++ b/KNN2.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOGIMnYsEkYniiiQwqadLYJ",
+      "authorship_tag": "ABX9TyPCEBOH30cAexyNlrmRL86h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,20 +35,12 @@
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import pandas as pd"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BEsh-5qMa6sB",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "path = \"https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\""
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+        "from sklearn.datasets import load_iris "
       ],
       "execution_count": 0,
       "outputs": []
@@ -61,7 +53,7 @@
         "colab": {}
       },
       "source": [
-        "headernames = ['sepal-length', 'sepal-width', 'petal-length', 'petal-width', 'Class']"
+        "path = \"https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -128,11 +120,38 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nYTIo_oCXzee",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(10,3))\n",
+        "fig = plt.scatter(X_train[:,[1]],y_train, marker='o', c=X_train[:,[1]],s=25)\n",
+        "plt.xlabel('X_train')\n",
+        "plt.colorbar(fig)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8f4HQQcMYs1g",
+        "colab_type": "text"
+      },
+      "source": [
+        "Standarize the dataset<br>\n",
+        "Standardization of a dataset is a common requirement for many machine learning estimators: they might behave badly if the individual features do not more or less look like standard normally distributed data"
+      ]
     },
     {
       "cell_type": "code",
@@ -142,11 +161,45 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.preprocessing import StandardScaler\n",
         "scaler = StandardScaler()\n",
         "scaler.fit(X_train)\n",
+        "#scaler.fit(X_test)\n",
         "X_train = scaler.transform(X_train)\n",
         "X_test = scaler.transform(X_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q3RCh6nJY04j",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(10,3))\n",
+        "fig = plt.scatter(X_train[:,[1]],y_train, marker='o', c=X_train[:,[1]],s=25)\n",
+        "plt.xlabel('X_train')\n",
+        "plt.colorbar(fig)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iLTjrUudY78D",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(10,3))\n",
+        "fig = plt.scatter(X_test[:,[1]],y_test, marker='o', c=X_test[:,[1]],s=25)\n",
+        "plt.xlabel('X_test')\n",
+        "plt.colorbar(fig)\n",
+        "plt.show()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -165,6 +218,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-BacUtgUZj23",
+        "colab_type": "text"
+      },
+      "source": [
+        "Create and train the model<br>\n",
+        "n_neighbors : int, optional (default = 5)<br>\n",
+        "Number of neighbors to use by default for :meth:`kneighbors` queries."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "kppRidjfbVsM",
@@ -172,7 +237,6 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.neighbors import KNeighborsClassifier\n",
         "classifier = KNeighborsClassifier(n_neighbors = 8)\n",
         "classifier.fit(X_train, y_train)"
       ],
@@ -195,18 +259,59 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "y4Cvax1LZyrb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(10,3))\n",
+        "fig = plt.scatter(X_test[:,[1]],y_test, marker='o', c=X_test[:,[1]],s=25)\n",
+        "plt.plot(y_pred, 'r+')\n",
+        "plt.xlabel('X_test')\n",
+        "plt.colorbar(fig)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c7lQSrTpWpHR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "result = confusion_matrix(y_test, y_pred)\n",
+        "print(\"Confusion Matrix:\")\n",
+        "print(result)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "3fpZCI0MbaS0",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
-        "result = confusion_matrix(y_test, y_pred)\n",
-        "print(\"Confusion Matrix:\")\n",
-        "print(result)\n",
         "result1 = classification_report(y_test, y_pred)\n",
         "print(\"Classification Report:\",)\n",
-        "print (result1)\n",
+        "print (result1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QzJeXealWxdp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "result2 = accuracy_score(y_test,y_pred)\n",
         "print(\"Accuracy:\",result2)"
       ],
