--- a/KNN2.ipynb
+++ b/KNN2.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPCEBOH30cAexyNlrmRL86h",
+      "authorship_tag": "ABX9TyMlyyXY77orfAxTwoVoUAF1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,6 +89,41 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "km0BjpljePw6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(10,3))\n",
+        "fig = plt.scatter(X[:,[0]],X[:,[2]], marker='o', c=X[:,[0]],s=25)\n",
+        "plt.xlabel(\"sepal-length\")\n",
+        "plt.ylabel(\"petal-length\")\n",
+        "plt.colorbar(fig)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x4TB44Mde_bZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(10,3))\n",
+        "fig = plt.scatter(X[:,[0]],y, marker='o', c=X[:,[0]],s=25)\n",
+        "plt.colorbar(fig)\n",
+        "plt.xlabel(\"sepal-length\")\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "2g2KzJIhbwsY",
         "colab_type": "code",
         "colab": {}
@@ -128,6 +163,24 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "NN2UziPjf4Ak",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(10,3))\n",
+        "fig = plt.scatter(X_train[:,[0]],X_train[:,[2]], marker='o', c=X_train[:,[0]],s=25)\n",
+        "plt.xlabel(\"sepal-length\")\n",
+        "plt.ylabel(\"petal-length\")\n",
+        "plt.colorbar(fig)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "nYTIo_oCXzee",
         "colab_type": "code",
         "colab": {}
@@ -136,6 +189,41 @@
         "plt.figure(figsize=(10,3))\n",
         "fig = plt.scatter(X_train[:,[1]],y_train, marker='o', c=X_train[:,[1]],s=25)\n",
         "plt.xlabel('X_train')\n",
+        "plt.colorbar(fig)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ag30elGkgCkU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(10,3))\n",
+        "fig = plt.scatter(X_test[:,[0]],X_test[:,[2]], marker='o', c=X_test[:,[0]],s=25)\n",
+        "plt.xlabel(\"sepal-length\")\n",
+        "plt.ylabel(\"petal-length\")\n",
+        "plt.colorbar(fig)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xnBWYXAYfrPG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(10,3))\n",
+        "fig = plt.scatter(X_test[:,[1]],y_test, marker='o', c=X_test[:,[1]],s=25)\n",
+        "plt.xlabel('X_test')\n",
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
@@ -266,7 +354,6 @@
       "source": [
         "plt.figure(figsize=(10,3))\n",
         "fig = plt.scatter(X_test[:,[1]],y_test, marker='o', c=X_test[:,[1]],s=25)\n",
-        "plt.plot(y_pred, 'r+')\n",
         "plt.xlabel('X_test')\n",
         "plt.colorbar(fig)\n",
         "plt.show()"
